--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		       <p>Subcribe</p>
 		   </section>
 		</section>
-		<img src="../logo/sample5.jpg">
+		<img src="sample5.jpg">
 	  </div>
 	</body>
 </html>
